0.11:

#2 Support for contributing filters
#3 Support for multiple URL patterns for servlets
#5 Upgrade Bootique to 0.12
 
0.10:

#1 New API for contributing Servlets