@@ -3,6 +3,7 @@
 #2 Support for contributing filters
 #3 Support for multiple URL patterns for servlets
 #5 Upgrade Bootique to 0.12
+#6 Move contribution API from JettyBinder into static methods on JettyModule
  
 0.10:
 
